syntax = "proto3";

package trash;

service TrashService {
    rpc GetAllTrash(GetAllTrashRequest) returns (GetAllTrashResponse);
    rpc GetTrashByTags(GetTrashByTagsRequest) returns (GetTrashByTagsResponse);
    rpc GetTrashInDistance(GetTrashInDistanceRequest) returns (GetTrashInDistanceResponse);
    rpc CreateTrash(CreateTrashRequest) returns(CreateTrashResponse);
    rpc UpdateTrash(UpdateTrashRequest) returns(UpdateTrashResponse);
    rpc DeleteTrash(DeleteTrashRequest) returns(DeleteTrashResponse);
}

message Trash {
    string uuid = 1;
    repeated float location = 2;
    string tag = 3;
}

message CreateTrashPayload {
    repeated float location = 1;
    string tag = 2;
}

message UpdateTrashPayload {
    string uuid = 1;
    optional string tag = 2;
    repeated float location = 3;
}

message GetAllTrashRequest {}

message GetAllTrashResponse {
    int32 status = 1;
    repeated Trash trash = 2;
}

message GetTrashByTagsResponse {
    int32 status = 1;
    repeated Trash trash = 2;
}

message GetTrashByTagsRequest {
    repeated string tags = 1;
}

message GetTrashInDistanceRequest {
    optional float minDistance = 1;
    optional float maxDistance = 2;
    float latitude = 3;
    float longitude = 4;
}

message GetTrashInDistanceResponse {
    int32 status = 1;
    repeated Trash trash = 3;
}

message CreateTrashRequest {
    CreateTrashPayload trash = 1;
}

message CreateTrashResponse {
    int32 status = 1;
}

message UpdateTrashRequest {
    UpdateTrashPayload trash = 1;
}

message UpdateTrashResponse {
    int32 status = 1;
}

message DeleteTrashRequest {
    string uuid = 1;
}

message DeleteTrashResponse {
    int32 status = 1;
}
